syntax = "proto3";

option go_package = ".;proto";

package proto;

// Method method of the websocket request
enum Method {
	// Unknown unknown
	Unknown = 0;
	// Subscription 消息订阅
	Subscription = 1;
	// Unsubscription 取消订阅
	Unsubscription = 2;
	// Broadcast 广播
	Broadcast = 3;
}

// WebSocketRequest websocker request
message WebSocketRequest {
}

// WebSocketResponse websocket response
message WebSocketResponse {
}

// WebSocketBroadcast websocket broadcast
message WebSocketBroadcast {
}